--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,26 @@
   height: 50px;
   line-height: 50px;
 }
+
+.field:hover {
+  cursor: pointer;
+}
+
+.dice {
+  border: 1px solid black;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  width: min-content;
+  height: max-content;
+}
+
+.pip, .filler-pip {
+  margin: 0px;
+  width: 10px;
+  height: 10px;
+}
+.pip {
+  border-radius: 50%;
+  border: 1px solid black;
+  background-color: black;
+}
