--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,11 @@
   width: 50px;
   height: 50px;
   line-height: 50px;
+  display: flex;
+}
+
+.field > .dice {
+  margin: auto;
 }
 
 .field:hover {
